#10 Fix: Mini profile title padding and truncate. Badge style order

--- a/style/components/app-header.css
+++ b/style/components/app-header.css
@@ -22,6 +22,10 @@
   margin-left: 1rem;
 }
 
+.app-header .user-profile-dropdown .text-info .title {
+  width: max-content;
+}
+
 .app-header .notification .dot {
   width: 7px;
   height: 7px;
