--- a/style/components/mini-profile.css
+++ b/style/components/mini-profile.css
@@ -21,5 +21,5 @@
 }
 
 .mini-profile .title {
-  line-height: 1.1;
+  line-height: 1.25;
 }
